syntax = "proto3";

package xopoww.tgmock;
option go_package = "github.com/xopoww/standup/pkg/tgmock/control";

import "tgmessage.proto";

message Update {
    int64 update_id = 1;

    Message message = 2;
}

message CreateUpdateRequest {
    Update update = 1;
}

message CreateUpdateResponse {
    int64 message_id = 1; // if update contained a message
}